# nothing

./: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json  shell.nix  vite.config.ts
.github/: dependabot.yml
.github/workflows/: checks.yml  flake-inputs.yml  push.yml  release.yml
backend/: Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: main.rs
frontend/: file.ts  main.ts  styles.css
frontend/tests/: file.tests.ts  main.test.ts
