[package]
name = "nothing"
version = "0.2.2"
description = "Simple Markdown editor."
authors = ["Raroh73"]
license = "MIT"
repository = "https://github.com/Raroh73/nothing"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
anyhow = "1.0.75"
tauri = { version = "1.5.0", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all", "updater"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
